<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg"
    tools:context=".InsertProductActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/Insert_Product"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/et_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textSize="18sp"
        android:autofillHints="productName"
        android:layout_marginBottom="16dp"

         />
    <EditText
        android:id="@+id/et_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_price"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"/>


    <ImageView
        android:id="@+id/iv_selected_image"
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:layout_marginBottom="16dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/image_description"
        app:srcCompat="@drawable/upload_icon"/>
    <Button
        android:id="@+id/btn_select_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        android:layout_marginBottom="16dp"/>
    <Button
        android:id="@+id/btn_insert_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Insert_Product"
        android:layout_marginBottom="16dp"/>



</LinearLayout>